k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service
          image: 035074950883.dkr.ecr.us-east-1.amazonaws.com/ecommerce-order-service:1.0

          ports:
            - containerPort: 5003

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5003
            initialDelaySeconds: 15
            periodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  name: order-service

spec:
  selector:
    app: order-service

  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003

  type: ClusterIP
