k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service
          image: 035074950883.dkr.ecr.us-east-1.amazonaws.com/ecommerce-product-service:1.0

          ports:
            - containerPort: 5002

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 15
            periodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  name: product-service

spec:
  selector:
    app: product-service

  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002

  type: ClusterIP
